# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "september"
version = "0.2.35"
authors = ["Fuwn <contact@fuwn.me>"]
edition = "2021"
description = "A simple and efficient Gemini-to-HTTP proxy."
readme = "README.md"
homepage = "https://github.com/gemrest/september"
repository = "https://github.com/gemrest/september"
license = "GPL-3.0-only"
keywords = ["rust", "gemini", "proxy"]
categories = ["web-programming", "web-programming::http-server"]
rust-version = "1.78.0"

# Slower builds, faster executables
[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3

[dependencies]
# Gemini
germ = { version = "0.4.5", features = ["ast", "meta"] }

# HTTP
actix-web = "4.9.0"

# Logging
pretty_env_logger = "0.5.0"
log = "0.4.22"

# Environment Variables
dotenv = "0.15.0"

# URL Standard
url = "2.5.2"

# Markdown Encoding
comrak = "0.29.0"

[build-dependencies]
# Compile-time Environment Variables
vergen = { version = "8.3.2", features = ["git", "gitoxide"] }

# `Result`
anyhow = "1.0.92"
